# applied-data-science-with-haskell

./: CHANGELOG.md  README.md  applied-data-science-with-haskell.cabal
.devcontainer/: Dockerfile
app/: Assignment1.hs
notebooks/week2/: DataFrameDataStructure_ed.ipynb  DataFrameIndexingAndLoading_ed.ipynb  DataFrameManipulation_ed.ipynb  ExampleManipulatingDataFrames.ipynb  MissingValues_ed.ipynb  QueryingDataFrame_ed.ipynb  assignment2_haskell.ipynb  assignment2_python.ipynb
notebooks/week2/datasets/: class_grades.csv
notebooks/week3/: GroupBy_ed.ipynb  MergingDataFrame_ed.ipynb
notebooks/week3/datasets/: EnergyIndicators.csv  scimagojr-3.csv
